--- a/bin/Viper.css
+++ b/bin/Viper.css
@@ -34,6 +34,34 @@
 	-fx-cursor: hand;
 }
 
+.editListItem{
+	-fx-background-image: url('image/edit.png');
+ 	-fx-background-repeat: no-repeat;
+ 	-fx-background-position: center;
+ 	-fx-background-color: none;
+ 	-fx-padding-top: 10px;
+}
+.editListItem:hover{
+	-fx-background-color: linear-gradient(#ffffff, #f2f2f2);
+	-fx-cursor: hand;
+}
+
+.addFamilyErrorMessageLabel{
+	-fx-text-fill: #ff0000;
+}
+
+.reloadList{
+	-fx-background-image: url('image/reload.png');
+ 	-fx-background-repeat: no-repeat;
+ 	-fx-background-position: center;
+ 	-fx-background-color: none;
+ 	-fx-padding-top: 10px;
+}
+.reloadList:hover{
+	-fx-background-color: linear-gradient(#ffffff, #f2f2f2);
+	-fx-cursor: hand;
+}
+
 .removeListItem{
 	-fx-background-image: url('image/minus.png');
  	-fx-background-repeat: no-repeat;
@@ -85,5 +113,11 @@
 	-fx-cursor: hand;
 }
 
+.textfield, .combobox, .textArea {
+    -fx-prompt-text-fill: #555555;
+}
+.combo-box:focused {
+    -fx-prompt-text-fill: transparent ;
+}
 
 
